--- a/app/templates/nu_pitch.html
+++ b/app/templates/nu_pitch.html
@@ -5,6 +5,9 @@
     <div class="well">
         <hr> {{wtf.quick_form(pitch_form)}}
     </div>
+    <div class="col-md-4">
+        {{ wtf.quick_form(review_form) }} {{simplemde.load}}
+    </div>
 </div>
 
 {% endblock %}
