--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -2,8 +2,7 @@
 <div class=" col-md-10 col-md-offset-1 col-sm-12">
     {% for cate in pitches %}
     <h3 class="text-center">{{cate.name|upper}}</h3>
-    <!-- <a class="btn btn-primary text-center text-danger " href="/index/viewing_pitch/{{cat.id}}"> Post a Pitch -->
-    </a>
+    <a class="btn btn-primary text-center text-danger" style="float:right;" href="{{url_for('main.new_pitch',id=category.id)}}"> Post a Pitch</a>
     <hr> {% endfor %}
 </div>
 {% for pitch in pitches %}
@@ -15,8 +14,6 @@
             <div class="col-md-10 col-sm-12">
                 <h3>{{pitch.content}}</h3>
                 <p>{{pitch.posted}}</p>
-
-
 
 
             </div>
