--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -7,4 +7,11 @@
     </li>
 </div>
 
+{% endfor %} {% endmacro %} {% macro displayCategoryList(category_list) %} {% for category in category_list %}
+<div>
+    <a href="{{url_for('main.category',id=category.id)}}">
+        <p>{{category.name|upper}}</p>
+    </a>
+</div>
+
 {% endfor %} {% endmacro %}
