add some changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,8 +19,12 @@
             </div>
         </div>
     </div>
-
-    <hr>
+    <br>
+    <div class="container">
+        <ul>
+            <li><strong>Give time everything cause it solves everything</strong></li>
+        </ul>
+    </div>
 
     <div class="container">
         <br>
