add some changes

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% import 'macros.html' as macro%} {% block content %}
 
 <div class="container">
-    <a class="btn btn-primary text-center text-danger" style="float:right;" href="{{url_for('main.nu_pitch',id=category.name)}}"> Post a Pitch</a>
+    <a class="btn btn-primary text-center text-danger" style="float:right;" href="{{url_for('main.nu_pitch',id=category.id)}}"> Post a Pitch</a>
 </div>
 
 <br>
