--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %} {% import 'macros.html' as macro%} {% block content %}
 
 <div class="container">
-    <a class="btn btn-primary text-center text-danger" style="float:right;" href="{{url_for('main.nu_pitch',id=category.id)}}"> Post a Pitch</a>
+    {{ macro.displayCategoryList(category) }} {% for cat in category%}
+    <a class="btn btn-primary text-center text-danger" style="float:right;" href="{{url_for('main.nu_pitch',id=cat.id)}}"> Post a Pitch</a> {% endfor %}
+
 </div>
+
+
 
 <br>
 <br>
