--- a/app/templates/fourOwfour.html
+++ b/app/templates/fourOwfour.html
@@ -1,3 +1,3 @@
 {% extends 'base.html'%} {% block content %}
-<h1>Oh la la! We are so sorry however we can't find that page</h1>
+<h1>Sorry however we can't find that page</h1>
 {% endblock %}
