--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
         <br>
 
 
-        <h3 class="add-category"><a class="btn btn-primary" href="/categories/view_pitch/add/" style="background-color:#002457; float:right;"><span aria-hidden="true"> ADD CATEGORY </span></a></h3>
+        <h3 class="add-category"><a class="btn btn-primary" href="/add/category" style="background-color:#002457; float:right;"><span aria-hidden="true"> ADD CATEGORY </span></a></h3>
     </div>
 
 </div>
