--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -12,7 +12,7 @@
     <a href="{{url_for('main.category',id=category.id)}}">
         <p>{{category.name|upper}}</p>
     </a>
-    {% for c in category.pitch %} {{c.content}} {% endfor %}
+    <!-- {% for c in category.pitch %} {{c.content}} {% endfor %} -->
 
 </div>
 
