add some changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,7 @@
 {% extends 'bootstrap/base.html'%}
 <!-- Navbar block  -->{% block navbar %} {% include 'navbar.html' %} {% endblock %} {%block styles %} {{super()}}
 <!--Importing the simple mde css and js files  -->
-{{ simplemde.css}} {{ simplemde.js }} {% endblock %}
+
+<body style="background-image: url('https://s17736.pcdn.co/wp-content/uploads/2019/03/jason-leung-479251-unsplash-1024x683.jpg')">
+    {{ simplemde.css}} {{ simplemde.js }} {% endblock %}
+</body>
