--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <div class="container" id="block-text">
             <br>
             <div class="col-md-6">
-                <img src="/static/photos/minute.jpg" style="margin-right: 100%;padding-right: 100%; height:300px;">
+                <!-- <img src="/static/photos/minute.jpg" style="margin-right: 100%;padding-right: 100%; height:300px;"> -->
             </div>
 
 
@@ -23,11 +23,11 @@
     <div class="container">
         <br>
         <h2> <strong>PITCH CATEGORIES </strong></h2>
-        <strong style="font-size: 20px;">{{ macro.displayCategoryList(category) }} </strong>
+        <strong style="font-size: 20px">{{ macro.displayCategoryList(category) }} </strong>
         <a class="btn btn-primary btn-success text-center text-success" href="url_for('main.downvotes')">downvote</a>
         <a class="btn btn-primary btn-success text-center text-success" href="url_for('main.upvotes')">upvote</a>
         <br><br>
-        <a class="btn btn-primary btn-success text-center text-success" href="url_for('main.upvotes')">comment</a>
+        <a class="btn btn-primary btn-success text-center text-success" href="url_for('main.login_required.new_comment')">comment</a>
         <br>
         <h3 class="add-category"><a class="btn btn-primary" href="/add/category" style="background-color:#002457; float:right;"><span aria-hidden="true"> ADD CATEGORY </span></a></h3>
     </div>
