add some changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,6 @@
 <!-- Navbar block  -->{% block navbar %} {% include 'navbar.html' %} {% endblock %} {%block styles %} {{super()}}
 <!--Importing the simple mde css and js files  -->
 
-<body style="background-image: url('https://s17736.pcdn.co/wp-content/uploads/2019/03/jason-leung-479251-unsplash-1024x683.jpg')">
+<body style="background-image: url('https://s17736.pcdn.co/wp-content/uploads/2019/03/jason-leung-479251-unsplash-1024x683.jpg'); font-family:'Lato', sans-serif">
     {{ simplemde.css}} {{ simplemde.js }} {% endblock %}
 </body>
