add some changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,6 @@
     </div>
 
     <div class="container">
-
         <br>
         <h2> <strong>PITCH CATEGORIES </strong></h2>
         <strong style="font-size: 20px">{{ macro.displayCategoryList(category) }} </strong>
@@ -28,10 +27,11 @@
         <a class="btn btn-primary btn-success text-center text-success" href="url_for('main.upvotes')">upvote</a> -->
         <br><br>
 
-        <a class="btn btn-primary btn-success text-center text-success" href="{{url_for('main.new_comment')}}">comment</a>
+        <!-- <a class="btn btn-primary btn-success text-center text-success" href="/new_comment/">comment</a> -->
         <br>
         <h3 class="add-category"><a class="btn btn-primary" href="/add/category" style="background-color:#002457; float:right;"><span aria-hidden="true"> ADD CATEGORY </span></a></h3>
     </div>
+
 </div>
 
 <div class="well">
